--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -6,6 +6,31 @@ body,
   padding: 0;
 }
 
+h1 {
+  font-size: 30px;
+}
+
+h2 {
+  font-size: 24px;
+}
+
+p {
+  font-size: 16px;
+}
+input {
+  width: 300px;
+  font-size: 16px;
+  border: 1px solid;
+}
+
+#myButton {
+  width: 300px;
+  font-size: 16px;
+  border: 1px solid;
+  background: #0026ff;
+}
+
 html.dark {
   background: #121212;
+  font-size: 16px;
 }
